--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import { Form } from '../components/Form'
 ---
 
 <Layout title="Corrección de ortografía IA">
-  <h1>hello word</h1>
+  <Form client:load />
 </Layout>
