--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import { Form } from '../components/Form'
     <span
       class="bg-clip-text text-transparent bg-gradient-to-r from-purple-500 to-sky-300"
     >
-      ortografía IA
+      ortografIA
     </span>
   </h1>
 
