--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,7 +43,7 @@ const { title } = Astro.props
   }
 
   .paragraph {
-    line-break: anywhere;
+    text-wrap: pretty;
   }
 
   .message:last-child {
