--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,7 +4,7 @@ import { Form } from '../components/Form'
 
 <main class="grid place-items-center h-screen gap-10">
   <h1
-    class="max-w-[36rem] text-4xl font-bold tracking-tight text-slate-900 dark:text-slate-100 sm:text-7xl xl:max-w-[43.5rem] text-center mx-auto my-5"
+    class="max-w-[36rem] text-4xl font-bold tracking-tight text-slate-100 sm:text-7xl xl:max-w-[43.5rem] text-center mx-auto my-5"
   >
     Corrección de
     <span
