--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="min-h-screen dark:bg-zinc-950 dark:text-white bg-grid">
+  <body class="min-h-screen bg-zinc-950 text-white bg-grid">
     <slot />
   </body>
 </html>
