--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Metatags from '../components/Metatags.astro'
 interface Props {
   title: string
 }
@@ -9,12 +10,7 @@ const { title } = Astro.props
 <!doctype html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <Metatags title={title} />
   </head>
   <body class="min-h-screen bg-zinc-950 text-white bg-grid">
     <slot />
